﻿[1.1.2] - 2018-08-09
- Fixed an error where shows with Unicode in the title (eg. Yu☆Gi☆Oh!) couldn't be scraped without throwing an error, you can now watch them fine.
- Cleaned up the addon.xml file - Moved addon devs (past and present) to bottom of screen disclaimer, added a disclaimer mentioning that the addon is not legit, and that if you wish to support the anime makers, use Crunchyroll ot another similar service.

[1.1.1] - 2018-08-08
- Some aethetic changes.

[1.1.0] - 2018-08-06
- Scraper now scrapes the website instead of the API.
- Tiwi.kiwi is now disabled as it doesn't work anymore.
- Now uses ResolveURL instead of URLResolver, and uses it much more.
- Fixed the Aika, Drive.g and Rapidvideo sources.
- Switched the way the show name and episode title appear in the player to the "correct" order now.
- Major update, so updated by 0.1 rather than 0.0.1.

[1.0.4] - 2018-06-21
- Trakt authorization seems to be working now, yay! (though at this point not sure if it does anything beyond authorization)
- as a result of the Trakt fix, some files which were a little outdated from Exodus have been updated to use the newer (but still kind of dated) ones from Covenant
- thanks to SuzwagKururugi for adding the popular section

[1.0.3] - 2018-06-20
- fixed case where MP4Upload was not working properly
- fixed Hosts and Playback settings
- set some older hosts (and Tiki.kiwi, which as this point does not work at all) that may not work properly to default to off

[1.0.2] - 2018-05-25
- added episode number before title

[1.0.1] - 2018-05-13
- added line to import pyxbmct 

[1.0.0] - 2018-05-03
- Fixed MP4Upload issues
- Added support for: Streamango, Rapidvideo, and (kinda works) Tiwi.kiwi 

[0.9.8] - 2017-02-06
- Fixed G.drive bug

[0.9.7] - 2017-02-06
- Fix bug with MP4Upload provider

[0.9.6] - 2017-02-04
- Fixed a bug where movies would not show up at all when using select dialog
- Tried to fix a bug where progress dialog would stay open after video has started
