@@ -1,3 +1,3 @@
-# Masterani Redux
+# Masterani Redux by Wilson Magic
 A complete rewrite of the scraper system in Alleidun's Masterani addon for Kodi.
 Includes multiple fixes based on the code of reddit user and addon developer SirTakoyaki.
